--- a/_posts/2022-03-27-08-01-36-new-post.md
+++ b/_posts/2022-03-27-08-01-36-new-post.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: "什么是驱动框架？"
-keywords: ["驱动" "框架"]
+keywords: ["驱动框架"]
 description: "驱动框架简介"
 categories: "led"
 tags: ["linux驱动"]
 permalink: /new-post.html
 ---
-
+## Linux驱动框架简介
 在Linux驱动开发中，涉及3类设备：字符设备、块设备和网络设备。但是在具体的开发过程中，Linux内核对各种硬件进行了分类，然后针对各类硬件实现一套比较标准的驱动框架，其中每类硬件共有属性那一部分由内核开发者负责实现和维护，然后给驱动开发者留出接口用来完成具体硬件的特定操作部分，这更加简化了驱动开发者的编码工作。
 
 什么意思呢？比如，led归属于字符设备，我们可以从头到尾按照字符设备的编写流程（创建字符设备、设备、类、file_operations结构）来开发，但是这样比较繁琐，Linux内核针j将led设备归属于leds类，并提供led驱动框架来点亮led灯。它只需要调用一个注册设备的接口就可以取代之前手动创建字符设备、设备类、file_operations结构的过程。
