--- a/_posts/2022-03-27-08-01-36-new-post.md
+++ b/_posts/2022-03-27-08-01-36-new-post.md
@@ -5,6 +5,7 @@ keywords: ["驱动框架"]
 description: "驱动框架简介"
 categories: "led"
 tags: ["linux驱动"]
+post_author_name: ByteJog
 permalink: /new-post.html
 ---
 ## Linux驱动框架简介
