initcall机制 参考地址

--- a/_posts/2022-06-10-03-39-49-new-post.md
+++ b/_posts/2022-06-10-03-39-49-new-post.md
@@ -209,3 +209,5 @@ static void __init do_initcalls(void)
 \_\_initcall##level##\_start关联到".initcall##level##.init"段和".initcall##level##s.init"段。
 
 到这里，\_\_initcall##level##\_start和".initcall##level##.init"段的对应就比较清晰了，所以，从initcall_levels[level]部分一个个取出函数指针,并执行每一个函数，其中有一个fn就是执行xxx_initcall()定义的函数。
+
+参考地址：https://blog.csdn.net/m0_47799526/article/details/106271442
