--- a/_posts/2022-03-31-07-54-54-new-post.md
+++ b/_posts/2022-03-31-07-54-54-new-post.md
@@ -5,7 +5,7 @@ keywords: ["workqueue"]
 description: "Linux-workqueue讲解"
 categories: "Linux"
 tags: ["Linux kernel"]
-permalink: /new-post.html
+permalink: /2022-03-31-07-54-54-new-post.html
 ---
 #### 1. workqueue 是什么？
 
