--- a/_posts/2022-06-10-03-39-49-new-post.md
+++ b/_posts/2022-06-10-03-39-49-new-post.md
@@ -4,7 +4,7 @@ title: "initcall机制"
 keywords: ["initcall", "vmlinux.lds"]
 description: "linux驱动程序两种机制"
 categories: "Linux"
-tags: ["Linux kernel"]
+tags: ["Linux Kernel"]
 permalink: /2022-06-10-03-39-49-new-post.html
 ---
 #### 一. initcall机制的由来
