--- a/_posts/2022-11-14-10-42-38-new-post.md
+++ b/_posts/2022-11-14-10-42-38-new-post.md
@@ -3,8 +3,8 @@ layout: post
 title: "ARM Linux系统调用"
 keywords: ["Linux系统调用"]
 description: "ARM Linux系统调用"
-categories: "ARM Linux系统调用"
-tags: ["ARM Linux系统调用"]
+categories: "ARM Linux 系统调用"
+tags: ["Linux Kernel"]
 permalink: /2022-11-14-10-42-38-new-post.html
 
 ---
