--- a/_posts/2022-03-31-07-54-54-new-post.md
+++ b/_posts/2022-03-31-07-54-54-new-post.md
@@ -4,7 +4,7 @@ title: "Linux-workqueue讲解 "
 keywords: ["workqueue"]
 description: "Linux-workqueue讲解"
 categories: "Linux"
-tags: ["Linux kernel"]
+tags: ["Linux Kernel"]
 permalink: /2022-03-31-07-54-54-new-post.html
 ---
 #### 1. workqueue 是什么？
